--- a/TestDjango006D/administrador/static/core/CSS/master.css
+++ b/TestDjango006D/administrador/static/core/CSS/master.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(../img/bg.jpeg) no-repeat center top;
+    background-color:orange;
     background-size: cover;
     font-family: sans-serif;
     height: 100vh;
@@ -10,7 +10,7 @@ body {
   .login-box {
     width: 320px;
     height: 420px;
-    background: #000;
+    background:black;
     color: #fff;
     top: 50%;
     left: 50%;
