--- a/TestDjango006D/administrador/static/core/CSS/master.css
+++ b/TestDjango006D/administrador/static/core/CSS/master.css
@@ -17,25 +17,20 @@ body {
     position: absolute;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
-    padding: 70px 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 140px;
   }
   
   .login-box .avatar {
-    width: 100px;
     height: 100px;
+    width: 120px;
     border-radius: 50%;
     position: absolute;
-    top: -50px;
+    top: 10px;
     left: calc(50% - 50px);
   }
-  
-  .login-box h1 {
-    margin: 0;
-    padding: 0 0 20px;
-    text-align: center;
-    font-size: 22px;
-  }
-  
+
   .login-box label {
     margin: 0;
     padding: 0;
