--- a/TestDjango006D/administrador/templates/core/form.html
+++ b/TestDjango006D/administrador/templates/core/form.html
@@ -13,5 +13,8 @@
             {{form.as_table}}
         </div>
     </form>
+    <div class="alert-alert-success" role="alert">
+        {{mensaje}}
+    </div>
 </body>
 </html>
