--- a/TestDjango006D/core/templates/core/Contacto.html
+++ b/TestDjango006D/core/templates/core/Contacto.html
@@ -7,42 +7,45 @@
     <title>Rayo Makween</title>
 </head>
 <body>
-    <div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <img class="logo" src="https://st.depositphotos.com/1006018/3132/v/600/depositphotos_31322065-stock-illustration-automotive-mechanic-car-repair-retro.jpg" alt="">
-              <a class="navbar-brand" href="#">Taller Mecánico Rayo Makween</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Registro.html">Registrate Aqui</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Nuestros Mecanicos
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="MecaEle.html">Especialista  en  electrónica  automotriz</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="MecaCam.html">Especialista en caja de cambio</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="MecaSus.html">Especialista en suspensión y dirección</a></li>
-                    </ul>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Contacto.html">Contactanos</a>
-                  </li>
-                  </li>
+  <div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <img class="logo" src="{% static 'core/IMG/logo.jpg' %}" alt="">
+          <a class="navbar-brand" href="#">Taller Mecánico Rayo Makween</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="Index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Registro.html">Registrate Aqui</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Nuestros Mecanicos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="MecaEle.html">Especialista  en  electrónica  automotriz</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="MecaCam.html">Especialista en caja de cambio</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="MecaSus.html">Especialista en suspensión y dirección</a></li>
                 </ul>
-              </div>
-            </div>
-          </nav>
-      </div>
+              <li class="nav-item">
+                <a class="nav-link" href="Contacto.html">Contactanos</a>
+              </li>
+              </li>
+            </ul>
+            <form class="d-flex">
+              
+            </form>
+          </div>
+        </div>
+      </nav>
+  </div>
     <!--Fin navbar-->
     <center>
       <h1>&bull; Contactanos &bull;</h1>
