--- a/TestDjango006D/core/templates/core/Registro.html
+++ b/TestDjango006D/core/templates/core/Registro.html
@@ -15,7 +15,7 @@
 	<div>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
-			  <img class="logo" src="https://st.depositphotos.com/1006018/3132/v/600/depositphotos_31322065-stock-illustration-automotive-mechanic-car-repair-retro.jpg" alt="">
+			  <img class="logo" src="{% static 'core/IMG/logo.jpg' %}" alt="">
 			  <a class="navbar-brand" href="#">Taller Mecánico Rayo Makween</a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -44,6 +44,9 @@
 				  </li>
 				  </li>
 				</ul>
+				<form class="d-flex">
+				  
+				</form>
 			  </div>
 			</div>
 		  </nav>
